html css updates

--- a/style.css
+++ b/style.css
@@ -4,8 +4,25 @@ body{
 
 p {
 	color:blue;
+	font-size: 2vh;
 }
 
 h1{
 	color:red;
+}
+
+input{
+	color:black;
+	background-color:#97bcfc;
+	border:0;
+	margin:1px;
+	width:99vw;
+	height: 13vh;
+	padding:10px;
+	display: inline-block;
+
+	font-size: 6vh;
+	
+	font-weight: 700;
+	
 }
